--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,9 @@ jobs:
         go-version: 1.18
       id: go
 
+    - name: install migrate lib
+      run: curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$platform-amd64.tar.gz | tar xvz
+
     - name: Run Migrations
       run: make migrateup
 
