--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: secret
           POSTGRES_USER: root
-          POSTGRES_DB: simple_bank
+          POSTGRES_DB: bank_db
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
