add auth API and middleware

--- a/env.example
+++ b/env.example
@@ -1,3 +1,5 @@
 PORT=server port
 DB_DRIVER= DB driver ex. postgres
-DB_SOURCE_NAME=DB conn url 
+DB_SOURCE_NAME=DB conn url
+SYMMETRIC_KEY=PASETO symmetric key
+TOKEN_DURATION=access token duration ex 15m
