--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,12 @@
 version: "3.9"
 services:
-  postgres:
-    image: postgres:12-alpine
-    environment:
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=secret
-      - POSTGRES_DB=bank_db
-
   api:
     build:
       context: .
       dockerfile: Dockerfile
-    environment:
-      - DB_SOURCE_NAME=postgresql://root:secret@postgres:5432/bank_db?sslmode=disable
     ports:
       - "8080:8080"
     depends_on:
       - postgres
-    entrypoint:
-      [
-        "/app/wait-for.sh",
-        "postgres:5432",
-        "--",
-        "/app/start.sh"
-      ]
+    entrypoint: [ "/app/start.sh" ]
     command: [ "/app/main" ]
