fixing github actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -t latest .
-          docker push -a $REGISTRY/$REPOSITORY:$IMAGE_TAG
+          docker push -a $REGISTRY/$REPOSITORY
 
       - name: Deploy to EKS cluster
         run: |
