--- a/eks/deployment.yaml
+++ b/eks/deployment.yaml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
         - name: bank-api-deployment
-          image: 030596717499.dkr.ecr.eu-central-1.amazonaws.com/bank_golang:b468425bd1466d51a5ecac93d9f728efd5055dd0
+          image: 030596717499.dkr.ecr.eu-central-1.amazonaws.com/bank_golang:latest
+          imagePullPolicy: Always
           resources:
             requests:
               cpu: 100m
