--- a/eks/aws-auth.yaml
+++ b/eks/aws-auth.yaml
@@ -8,4 +8,4 @@ data:
     - groups:
       - system:masters
       userarn: arn:aws:iam::030596717499:user/local_machine
-      username: github_cd
+      username: local_machine
