--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
           docker push -a $REGISTRY/$REPOSITORY
 
       - name: Set Kube Config
-        run: aws eks update-kubeconfig --name bank_cluster --region eu-central-1
+        run: aws eks update-kubeconfig --name ${{ secrets.CLUSTER_NAME }} --region eu-central-1
       
       - name: Deploy to EKS cluster
         run: |
