--- a/eks/ingress.yaml
+++ b/eks/ingress.yaml
@@ -11,6 +11,7 @@ kind: Ingress
 metadata:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   name: bank-ingress
   namespace: default
 spec:
