add sessions table, git ignore

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PORT=8080
 DB_DRIVER=postgres
-DB_SOURCE_NAME=postgresql://root:secret@postgres:5432/bank_db?sslmode=disable
+DB_SOURCE_NAME=postgresql://root:secret@localhost:5432/bank_db?sslmode=disable
 SYMMETRIC_KEY=izskqBYbUEPNpOCrwlNzSTiqjfvbkUmx
-TOKEN_DURATION=30m
+TOKEN_DURATION=5m
+REFRESH_TOKEN_DURATION=24h
+
