--- a/env.example
+++ b/env.example
@@ -3,3 +3,5 @@ DB_DRIVER= DB driver ex. postgres
 DB_SOURCE_NAME=DB conn url
 SYMMETRIC_KEY=PASETO symmetric key
 TOKEN_DURATION=access token duration ex 15m
+REFRESH_TOKEN_DURATION=refresh token duration ex 1h
+
